--- a/fall.html
+++ b/fall.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FallGame</title>
-
+    <p>wont work on mobile, enable dektop site for that. Also need keyboard</p>
+<input type="text">
     <style>
         
 
