--- a/fall.html
+++ b/fall.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FallGame</title>
-    <p>wont work on mobile, enable dektop site for that. Also need keyboard</p>
-<input type="text">
+    <p>wont work on mobile, enable dektop site for that. Also needs keyboard then. Will work on it if time</p>
     <style>
         
 
